v3.7.1 (Unreleased)
- New: Breadcrumb compatibility with SEOPress. ( https://wpastra.com/docs/add-breadcrumbs-with-astra/#support-for-third-party-plugins )
- Fix: The default "Add Widget" text alignment issue in header.

v3.6.9
- Improvement: In the font size option, users cannot set the value '0'.
- Improvement: Introduced filter to exclude anchor links from text-decoration style. ( https://wpastra.com/docs/remove-underlined-content-links/ )
- Improvement: Clear asset cache of theme and addon on every new update of the theme.
- Improvement: Moved addon related Toggle for Desktop frontend-pro.js file from theme to the addon.
- Improvement: Moved the 'Site Icon' control to a separate section, 'Site Identity'.
- Fix: Auto-scroll not working on clicking Footer Builder in the customizer preview.
- Fix: WooCommerce - Cart icon not appearing correctly on Tablet & Mobile devices.
- Fix: Dropdown target as a link not working if the menu item has a link.
- Fix: WooCommerce - Cart count is overlapping on submenu section.
- Fix: The submenu toggle is not working when 'Flyout Menu' is used, and the page is resized.
- Fix: Customizer color group control's reset position misaligned.
- Fix: Desktop logo width is applying on the mobile devices during page load.
- Fix: Social icon does not change in the customizer preview.
- Fix: Gutenberg Editor content area showing white background color when Full-Width Contained / Stretched layout is active.
- Deprecated: Builder - Account Element - Deprecated transparent header's responsive options for menu colors.

v3.6.8
- Improvement: Added WPML translation support for all customizer's strings through wpml-config.xml file.
- Fix: Elementor Pro's Header-Footer theme builder layouts does not override theme's Header-Footer builder layouts.
- Fix: Bulk action selection not working on any WordPress list table when theme's "Get Started" notice is active.