@@ -1,6 +1,7 @@
 v3.7.1 (Unreleased)
 - New: Breadcrumb compatibility with SEOPress. ( https://wpastra.com/docs/add-breadcrumbs-with-astra/#support-for-third-party-plugins )
 - Fix: The default "Add Widget" text alignment issue in header.
+- Fix: CSS parse error for '.menu-link' & '.wp-block-button__link'.
 
 v3.6.9
 - Improvement: In the font size option, users cannot set the value '0'.
